[gd_scene load_steps=5 format=3 uid="uid://bjotwm87xr5ri"]

[ext_resource type="Texture2D" uid="uid://8ta6q47j8854" path="res://SimplExtensions/MainMenu/Art/LinkedTextureButtonNPlaceholder.png" id="1_0iq6v"]
[ext_resource type="Texture2D" uid="uid://c3lkklm3dfkb6" path="res://SimplExtensions/MainMenu/Art/LinkedTextureButtonPPlaceholder.png" id="2_cjoc3"]
[ext_resource type="Texture2D" uid="uid://g3o5xunikgh5" path="res://SimplExtensions/MainMenu/Art/LinkedTextureButtonHPlaceholder.png" id="3_xghq4"]
[ext_resource type="Script" path="res://SimplExtensions/MainMenu/LinkedTextureButton.gd" id="4_j24gc"]

[node name="LinkedTextureButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("1_0iq6v")
texture_pressed = ExtResource("2_cjoc3")
texture_hover = ExtResource("3_xghq4")
script = ExtResource("4_j24gc")
base_pos = Vector2(304, 164)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
custom_minimum_size = Vector2(64, 15)
layout_mode = 2
mouse_filter = 2
fit_content = true
scroll_active = false

[node name="LogoTexture" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
